[KS-RU-01]: Horizontal scrolling fix

--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -178,7 +178,6 @@
         }
 
         @include respond-to(desktop) {
-            padding: 0;
             border: none;
             background-color: transparent;
             display: inline;
